cmake_minimum_required(VERSION 3.13 FATAL_ERROR)

project(csUtil-dev)

file(MAKE_DIRECTORY
  ${CMAKE_CURRENT_BINARY_DIR}/bin
  ${CMAKE_CURRENT_BINARY_DIR}/lib
  )

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_PDB_OUTPUT_DIRECTORY     ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)

set(ENABLE_CHARCONV  OFF CACHE BOOL "" FORCE)
set(ENABLE_QT        OFF CACHE BOOL "" FORCE)
set(ENABLE_QTCREATOR OFF CACHE BOOL "" FORCE)
set(ENABLE_UNICODE   OFF CACHE BOOL "" FORCE)

set(ENABLE_TESTS     OFF CACHE BOOL "" FORCE)
set(ENABLE_UNITTESTS OFF CACHE BOOL "" FORCE)

add_subdirectory(csUtil)
